apps/base/media-center/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 9696
      protocol: TCP
  selector:
    app.kubernetes.io/name: prowlarr
