apps/base/media-center/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - prowlarr.nathan-fouere.com
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
